[project]
name = "medisana-blood-pressure"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "bluetooth-sensor-state-data>=1.9.0",
    "homeassistant>=2024.12.5",
    "ruff>=0.12.4",
]
[tool.ruff]
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "I", "B", "UP", "C90", "N", "D", "PL", "PERF", "RUF",
    "SIM", "PTH", "TRY", "FBT", "G", "ARG"
]
ignore = [
    "E501",   # Zeilenlänge
    "D102",   # Kein Docstring in Methoden
    "D107",   # Kein Docstring in __init__
    "D203",   # Konflikt mit D211
    "D213",    # Konflikt mit D212
    "G004"
]

[tool.ruff.lint.isort]
known-first-party = ["dein_paketname"]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"


[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = true
strict_optional = true
files = ["custom_components"]
