[project]
name = "medisana-blood-pressure"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13.2"
dependencies = [
    "aiousbwatcher>=1.1.1",
    "bluetooth-sensor-state-data>=1.9.0",
    "homeassistant>=2025.8.0b2",
    "mypy>=1.17.1",
    "pyserial>=3.5",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
    "ruff>=0.12.7",
    "serial>=0.0.97",
    "types-requests>=2.32.4.20250611",
]
[tool.ruff]
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "I", "B", "UP", "C90", "N", "D", "PL", "PERF", "RUF",
    "SIM", "PTH", "TRY", "FBT", "G", "ARG"
]
ignore = [
    "E501",   # Zeilenlänge
    "D102",   # Kein Docstring in Methoden
    "D107",   # Kein Docstring in __init__
    "D203",   # Konflikt mit D211
    "D213",    # Konflikt mit D212
    "G004"
]

[tool.ruff.lint.isort]
known-first-party = ["dein_paketname"]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"


[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
disallow_untyped_defs = true
strict_optional = true
files = ["custom_components/medisana_blood_pressure"]
